Tests/RunCMake/CPack_RPM/Basic-verify-stderr.txt
^(error: can't create transaction lock[^
]*)?$
